--- a/bank_system_2.0/package.json
+++ b/bank_system_2.0/package.json
@@ -1,6 +1,7 @@
 {
   "name": "bank_system_2.0",
   "version": "0.1.0",
+  "proxy": "http://127.0.0.1:5554",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,18 +10,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.5",
+    "next": "14.2.6",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.6"
+    "react-hook-form": "^7.53.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.6",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.6"
+    "typescript": "^5"
   }
 }
