--- a/bank/requirements.txt
+++ b/bank/requirements.txt
@@ -18,12 +18,15 @@ django-ckeditor-5==0.2.18
 django-cors-headers==4.7.0
 django-defender==0.9.8
 django-json-widget==2.0.1
+django-schema-viewer==0.5.3
 django-simpleui==2025.5.262
 django-timezone-field==7.1
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
+drf-yasg==1.21.11
 gunicorn==23.0.0
 idna==3.11
+inflection==0.5.1
 kombu==5.5.4
 oauthlib==3.3.1
 packaging==25.0
@@ -35,12 +38,15 @@ PyJWT==2.9.0
 python-crontab==3.3.0
 python-dateutil==2.9.0.post0
 python-decouple==3.8
+pytz==2025.2
+PyYAML==6.0.3
 redis==6.2.0
 requests==2.32.5
 six==1.17.0
 sqlparse==0.5.3
 typing_extensions==4.15.0
 tzdata==2025.2
+uritemplate==4.2.0
 urllib3==2.5.0
 vine==5.1.0
 wcwidth==0.2.14
