--- a/bank/requirements.txt
+++ b/bank/requirements.txt
@@ -1,6 +1,7 @@
 amqp==5.3.1
 asgiref==3.11.0
 billiard==4.2.3
+brotli==1.2.0
 celery==5.5.3
 certifi==2025.11.12
 cffi==2.0.0
@@ -11,20 +12,24 @@ click-plugins==1.1.1.2
 click-repl==0.3.0
 cron_descriptor==2.0.6
 cryptography==46.0.3
+cssselect2==0.8.0
 Django==5.2.8
 django-allauth==65.13.0
 django-celery-beat==2.8.1
 django-ckeditor-5==0.2.18
 django-cors-headers==4.9.0
 django-defender==0.9.8
+django-encrypted-model-fields==0.6.5
 django-guardian==3.2.0
 django-json-widget==2.1.0
 django-schema-viewer==0.5.3
 django-simpleui==2025.6.24
 django-timezone-field==7.1
+django-weasyprint==2.4.0
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
 drf-yasg==1.21.11
+fonttools==4.61.0
 gunicorn==23.0.0
 idna==3.11
 inflection==0.5.1
@@ -36,7 +41,9 @@ pip-review==1.3.0
 prompt_toolkit==3.0.52
 psycopg2-binary==2.9.11
 pycparser==2.23
+pydyf==0.12.1
 PyJWT==2.10.1
+pyphen==0.17.2
 python-crontab==3.3.0
 python-dateutil==2.9.0.post0
 python-decouple==3.8
@@ -46,10 +53,15 @@ redis==7.1.0
 requests==2.32.5
 six==1.17.0
 sqlparse==0.5.3
+tinycss2==1.5.1
+tinyhtml5==2.0.0
 typing_extensions==4.15.0
 tzdata==2025.2
 uritemplate==4.2.0
 urllib3==2.5.0
 vine==5.1.0
 wcwidth==0.2.14
+weasyprint==67.0
+webencodings==0.5.1
 whitenoise==6.11.0
+zopfli==0.4.0
