--- a/bank/requirements.txt
+++ b/bank/requirements.txt
@@ -1,5 +1,6 @@
 amqp==5.3.1
 asgiref==3.11.0
+attrs==25.4.0
 billiard==4.2.3
 brotli==1.2.0
 celery==5.5.3
@@ -22,22 +23,26 @@ django-defender==0.9.8
 django-encrypted-model-fields==0.6.5
 django-guardian==3.2.0
 django-json-widget==2.1.0
+django-prometheus==2.4.1
 django-schema-viewer==0.5.3
 django-simpleui==2025.6.24
 django-timezone-field==7.1
 django-weasyprint==2.4.0
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
-drf-yasg==1.21.11
+drf-spectacular==0.29.0
 fonttools==4.61.0
 gunicorn==23.0.0
 idna==3.11
 inflection==0.5.1
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
 kombu==5.5.4
 oauthlib==3.3.1
 packaging==25.0
 pillow==12.0.0
 pip-review==1.3.0
+prometheus_client==0.23.1
 prompt_toolkit==3.0.52
 psycopg2-binary==2.9.11
 pycparser==2.23
@@ -50,7 +55,9 @@ python-decouple==3.8
 pytz==2025.2
 PyYAML==6.0.3
 redis==7.1.0
+referencing==0.37.0
 requests==2.32.5
+rpds-py==0.30.0
 six==1.17.0
 sqlparse==0.5.3
 tinycss2==1.5.1
