--- a/bank/Dockerfile
+++ b/bank/Dockerfile
@@ -3,7 +3,18 @@ FROM python:3.11
 # Set work directory
 WORKDIR /app
 
-
+# to handle wesyprint issues
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends \
+       build-essential \
+       libcairo2 \
+       libpango-1.0-0 \
+       libpangocairo-1.0-0 \
+       libgdk-pixbuf-xlib-2.0-0 \
+       libffi-dev \
+       shared-mime-info \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements first for caching
 COPY requirements.txt .
@@ -14,8 +25,5 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy entire project
 COPY . .
 
-# Expose port
-EXPOSE 8000
+ENV PYTHONUNBUFFERED=1
 
-# Run Django using Gunicorn
-CMD ["gunicorn", "bank.wsgi:application", "--bind", "0.0.0.0:8000"]
