--- a/bank/requirements.txt
+++ b/bank/requirements.txt
@@ -19,6 +19,7 @@ django-allauth==65.13.0
 django-celery-beat==2.8.1
 django-ckeditor-5==0.2.18
 django-cors-headers==4.9.0
+django-daraja==1.3.0
 django-defender==0.9.8
 django-encrypted-model-fields==0.6.5
 django-guardian==3.2.0
@@ -28,11 +29,14 @@ django-schema-viewer==0.5.3
 django-simpleui==2025.6.24
 django-timezone-field==7.1
 django-weasyprint==2.4.0
+django_celery_results==2.6.0
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
 drf-spectacular==0.29.0
+flower==2.0.1
 fonttools==4.61.0
 gunicorn==23.0.0
+humanize==4.14.0
 idna==3.11
 inflection==0.5.1
 jsonschema==4.25.1
@@ -62,6 +66,7 @@ six==1.17.0
 sqlparse==0.5.3
 tinycss2==1.5.1
 tinyhtml5==2.0.0
+tornado==6.5.4
 typing_extensions==4.15.0
 tzdata==2025.2
 uritemplate==4.2.0
